--- a/index.html
+++ b/index.html
@@ -7,59 +7,74 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="header">
-    <div class="logo-title">
-      <img src="logo.png" alt="شعار" class="logo">
-      <h1>مستشفى ريسبكت</h1>
-    </div>
-    <div class="search-container">
-      <input type="text" id="searchInput" placeholder="ابحث بالاسم أو الرقم الوطني">
-      <button onclick="searchInsurance()">بحث</button>
-      <button onclick="openAddForm()">إضافة</button>
-      <button onclick="confirmDeleteAll()">حذف الكل</button>
-    </div>
-  </header>
+  <!-- المقدمة -->
+  <div id="intro" class="intro-screen">
+    <h1>مرحباً بك</h1>
+    <p>اختر نوع الدخول</p>
+    <button onclick="login('admin')">مشرفين الصحة والإدارة</button>
+    <button onclick="login('viewer')">أفراد الصحة (عرض فقط)</button>
+  </div>
 
-  <main>
-    <div class="categories">
-      <button class="cat silver">فضي</button>
-      <button class="cat gold">ذهبي</button>
-      <button class="cat platinum">بلاتيني</button>
-      <button class="cat expired">منتهي</button>
-      <button class="cat all">الكل</button>
-    </div>
-    <div id="insuranceList" class="insurance-list"></div>
-  </main>
-
-  <footer>
-    <p>© 2025 مستشفى ريسبكت</p>
-  </footer>
-
-  <!-- نافذة إضافة / تعديل -->
-  <div id="addForm" class="modal hidden">
-    <div class="modal-content">
-      <span class="close" onclick="closeForm()">&times;</span>
-      <h2>إضافة بيانات التأمين</h2>
-      <label>الاسم:</label>
-      <input type="text" id="name">
-      <label>الرقم الوطني:</label>
-      <input type="text" id="nationalId">
-      <label>الفئة:</label>
-      <select id="category">
-        <option value="فضي">فضي</option>
-        <option value="ذهبي">ذهبي</option>
-        <option value="بلاتيني">بلاتيني</option>
-        <option value="منتهي">منتهي</option>
-      </select>
-      <label>تاريخ الانتهاء:</label>
-      <input type="date" id="expiryDate">
-      <label>الصورة:</label>
-      <input type="file" id="imageInput">
-      <div class="modal-actions">
-        <button onclick="saveInsurance()">حفظ</button>
-        <button onclick="closeForm()">إلغاء</button>
+  <!-- الصفحة الرئيسية -->
+  <div id="main" class="hidden">
+    <header class="header">
+      <div class="logo-title">
+        <img src="logo.png" alt="شعار" class="logo">
+        <h2>مستشفى ريسبكت</h2>
       </div>
+      <div class="search-bar">
+        <input type="text" id="search" placeholder="ابحث بالاسم أو الرقم الوطني">
+        <button onclick="searchRecords()">🔍</button>
+      </div>
+      <div class="actions">
+        <button onclick="openAddModal()">➕ إضافة</button>
+        <button onclick="confirmDeleteAll()">🗑 حذف الكل</button>
+      </div>
+    </header>
+
+    <!-- الأقسام -->
+    <nav class="filters">
+      <button onclick="filterCategory('all')">الكل</button>
+      <button class="silver" onclick="filterCategory('فضي')">فضي</button>
+      <button class="gold" onclick="filterCategory('ذهبي')">ذهبي</button>
+      <button class="platinum" onclick="filterCategory('بلاتيني')">بلاتيني</button>
+      <button class="expired" onclick="filterCategory('منتهي')">منتهي</button>
+    </nav>
+
+    <!-- بطاقات التأمين -->
+    <div id="cards" class="cards"></div>
+  </div>
+
+  <!-- نافذة الإضافة/التعديل -->
+  <div id="modal" class="modal hidden">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal()">&times;</span>
+      <h2 id="modal-title">إضافة بيانات التأمين</h2>
+      <form id="insuranceForm">
+        <input type="hidden" id="editIndex">
+        <label>الاسم:</label>
+        <input type="text" id="name" required>
+        <label>الرقم الوطني:</label>
+        <input type="text" id="id" required>
+        <label>الفئة:</label>
+        <select id="category">
+          <option value="فضي">فضي</option>
+          <option value="ذهبي">ذهبي</option>
+          <option value="بلاتيني">بلاتيني</option>
+        </select>
+        <label>تاريخ الانتهاء:</label>
+        <input type="date" id="expiry" required>
+        <label>الصورة:</label>
+        <input type="file" id="image" accept="image/*">
+        <button type="submit">💾 حفظ</button>
+      </form>
     </div>
+  </div>
+
+  <!-- عرض الصورة بالحجم الكبير -->
+  <div id="imageModal" class="modal hidden">
+    <span class="close" onclick="closeImageModal()">&times;</span>
+    <img id="largeImage" src="">
   </div>
 
   <script src="script.js"></script>
